@@ -1,0 +1,9 @@
+# entryexit.nrt
+# Description: entryexit - Variation on Standard format that prints Entry and Exit points rather than LOS.
+fmt r "Origin (x y z) = (%.8f %.8f %.8f)  (h v d) = (%.4f %.4f %.4f)\nDirection (x y z) = (%.8f %.8f %.8f)  (az el) = (%.8f %.8f)\n" x_orig y_orig z_orig h v d_orig x_dir y_dir z_dir a e
+fmt h "    Region Name               Entry (x y z)                   Exit (x y z)             Obliq_in Attrib\n"
+fmt p "%-20s (%9.4f %9.4f %9.4f) (%9.4f %9.4f %9.4f) %8.4f %s\n" reg_name x_in y_in z_in x_out y_out z_out obliq_in attributes
+fmt f ""
+fmt m "You missed the target\n"
+fmt o "OVERLAP: '%s' and '%s' xyz_in=(%g %g %g) xyz_out=(%g %g %g)\n" ov_reg1_name ov_reg2_name ov_x_in ov_y_in ov_z_in ov_x_out ov_y_out ov_z_out
+fmt g ""
